# AACS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
AAClient/: CMakeLists.txt  main.cpp
AAClient/include/: AaCommunicator.h  ChannelHandler.h  DefaultChannelHandler.h  Device.h  InputChannelHandler.h  Library.h  Message.h  VideoChannelHandler.h  utils.h
AAClient/src/: AaCommunicator.cpp  ChannelHandler.cpp  DefaultChannelHandler.cpp  Device.cpp  InputChannelHandler.cpp  Library.cpp  Message.cpp  VideoChannelHandler.cpp  utils.cpp
AAClient/ssl/: headunit.crt  headunit.key
AAServer/: CMakeLists.txt  main.cpp
AAServer/include/: AaCommunicator.h  AudioChannelHandler.h  ChannelHandler.h  ChannelType.h  Configuration.h  DefaultChannelHandler.h  FfsFunction.h  Function.h  Gadget.h  InputChannelHandler.h  Message.h  Packet.h  PacketType.h  ServerUtils.h  SocketClient.h  VideoChannelHandler.h  descriptors.h  utils.h
AAServer/proto/: ChannelOpenRequest.proto
AAServer/src/: AaCommunicator.cpp  AudioChannelHandler.cpp  ChannelHandler.cpp  Configuration.cpp  DefaultChannelHandler.cpp  FfsFunction.cpp  Function.cpp  Gadget.cpp  InputChannelHandler.cpp  Library.cpp  ManualResetEvent.cpp  MassStorageFunction.cpp  Message.cpp  ModeSwitcher.cpp  ServerUtils.cpp  SocketClient.cpp  VideoChannelHandler.cpp  descriptors.cpp  utils.cpp
AAServer/ssl/: android_auto.crt  android_auto.key
AAVideoSink/: CMakeLists.txt  README.md  gstaavideosink.cpp  gstaavideosink.h
GetEvents/: CMakeLists.txt  main.cpp
doc/: INSTALL.md  compile_kernel.sh  kernel_config  tmp_usb_fix.patch
include/: AaCommunicator.h  Configuration.h  FfsFunction.h  Gadget.h  Library.h  ManualResetEvent.h  MassStorageFunction.h  Message.h  ModeSwitcher.h  Packet.h  PacketType.h  SocketClient.h  SocketCommunicator.h  Udc.h  descriptors.h  enums.h  utils.h
proto/: AudioConfig.proto  AudioType.proto  BluetoothChannel.proto  ButtonsEvent.proto  CMakeLists.txt  Channel.proto  ChannelOpenResponse.proto  InputChannel.proto  InputEvent.proto  MediaChannel.proto  MediaChannelSetupRequest.proto  MediaChannelSetupResponse.proto  MediaChannelStartIndication.proto  MediaInputChannel.proto  MediaStreamType.proto  NavigationChannel.proto  PingRequest.proto  PingResponse.proto  Sensor.proto  SensorChannel.proto  ServiceDiscoveryRequest.proto  ServiceDiscoveryResponse.proto  TouchAction.proto  TouchConfig.proto  TouchEvent.proto  TouchLocation.proto  VendorExtensionChannel.proto  VideoConfig.proto  VideoFps.proto  VideoResolution.proto
scripts/: aacs startx.desktop  aasl.lua  autologin.conf  base.ini  common  feedaudio  light-locker.desktop  setup  start  startx  startx_internal  videotestsrc2snowmix  xfce4-screensaver.xml
src/: AaCommunicator.cpp  FfsFunction.cpp  Gadget.cpp  ModeSwitcher.cpp  SocketClient.cpp  SocketCommunicator.cpp  Udc.cpp  utils.cpp
